--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Hello, Eduard</title>
+        <title>Hello</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Let's start!!!</h1>
-        <a href="https://www.vk.com">VK</a>
-        <a href="sp.html">Pages</a>
-        <a href="https://www.google.com">Google</a>
+
+            <!--MENU-->
+
+      <div id="green-menu">
+        <a href="#">
+          <h5>Home</h5>
+          <div>Home</div>
+        </a>
+
+        <a href="images.html">
+          <h5>Images</h5>
+          <div>Images</div>
+        </a>
+
+        <a href="interesting.html">
+          <h5>Interesting</h5>
+          <div>Interesting</div>
+        </a>
+
+        <a href="#">
+          <h5>Blog</h5>
+          <div>Blog</div>
+        </a>
+      </div>
+
+            <!--MENU-->
+
     </body>
 </html>
